<?xml version="1.0"?>
<package format="2">
  <name>stretch_tool_share</name>
  <version>0.0.0</version>
  <description>The stretch_tool_share package</description>

  <maintainer email="todo@todo.todo">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>stretch_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
